[package]
authors = ["Jim Hodapp"]
edition = "2021"
readme = "README.md"
name = "edge-rs"
version = "0.1.0"

[dependencies]
bme280 = { git = "https://github.com/VersBinarii/bme280-rs.git" }
defmt = "0.3.0"
defmt-rtt = "0.3.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
#embedded-hal = { version = "0.2", features=["unproven"] }
embedded-hal = "^1.0.0-alpha.8"
esp32-wroom-rp = { git = "https://github.com/Jim-Hodapp-Coaching/esp32-wroom-rp.git" }
panic-probe = { version = "0.3.0", features = ["print-rtt"] }

rp2040-hal = { version = "0.6", features=["rt", "eh1_0_alpha"] }
rp2040-boot2 = { version = "0.2" }
fugit = "0.3"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
